crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals@nullable_true.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: "(filter, result)"
---
(
    Filter {
        column_name: "bool",
        operation: BooleanEquals(
            true,
        ),
    },
    RecordBatch {
        schema: Schema {
            fields: [
                Field {
                    name: "bool",
                    data_type: Boolean,
                    nullable: true,
                    dict_id: 0,
                    dict_is_ordered: false,
                    metadata: {},
                },
            ],
            metadata: {},
        },
        columns: [
            BooleanArray
            [
              true,
              true,
            ],
        ],
        row_count: 2,
    },
)
