crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals@nulls_false.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: BooleanEquals(
        Some(
            false,
        ),
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
        nullable: true,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      null,
      false,
    ],
    filtered: BooleanArray
    [
      false,
    ],
}
