crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals@true.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: BooleanEquals(
        true,
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
        nullable: false,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      false,
    ],
    filtered: BooleanArray
    [
      true,
      true,
    ],
}
