crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list@inner_outer_nullable_true.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: "(filter, result)"
---
(
    Filter {
        column_name: "bool_list",
        operation: BooleanEquals(
            true,
        ),
    },
    RecordBatch {
        schema: Schema {
            fields: [
                Field {
                    name: "bool_list",
                    data_type: List(
                        Field {
                            name: "item",
                            data_type: Boolean,
                            nullable: true,
                            dict_id: 0,
                            dict_is_ordered: false,
                            metadata: {},
                        },
                    ),
                    nullable: true,
                    dict_id: 0,
                    dict_is_ordered: false,
                    metadata: {},
                },
            ],
            metadata: {},
        },
        columns: [
            ListArray
            [
              BooleanArray
            [
              true,
            ],
              BooleanArray
            [
              true,
              true,
            ],
            ],
        ],
        row_count: 2,
    },
)
